# automata

./: .gitignore  README.md  __init__.py  pyproject.toml  run.sh  start_dev.py  test_make_graph.py  test_matplotlib_backend.py
backend/: query_api.py  run_server.py
configs/: appconfig.js  appconfig.py  dep_link_models.py  link_models.py  matplotlib_config.py  paths.py
demo/: acheivable_demo.py  comparison_demo.py  helpers.py  leg.json  multi_demo.py  opt_demo.py  optimization_demo.py  solver_comparison_demo.py  walker0.json
demo/test_graphs/: 4bar.json  leg.json  strandbeast.json  strider.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  response_models.tsx  theme.css  (+2 more)
link/: gif_path_extraction.py  graph_tools.py  pybridge_dep.py  pylinkage_bridge.py  test_matplotlib_backend.py
optimizers/: __init__.py  multi_solution.py  nlopt_mlsl.py  pso_optimizer.py  pylinkage_pso.py  scipy_optimizer.py
pylink_tools/: demo.py  hypergraph_adapter.py  kinematic.py  mlink.py  optimization_helpers.py  optimize.py  ref.txt  schemas.py  solve_test.py  strider.py  trajectory_utils.py
structs/: basic.py
target_gen/: __init__.py  achievable_target.py  sampling.py  topology_changes.py
tests/: 4bar_test.json  conftest.py  test_api_endpoints.py  test_compute_graph.py  test_demo_linkages.py  test_file_operations.py  test_graph.json  test_kinematics.py  test_optimization.py  test_pylink_trajectory.py  test_pylinkage_bridge.py  test_trajectory_utils.py
viz_tools/: __init__.py  animate.py  demo_viz.py  opt_viz.py  viz.py
(+27 files in other folders)
