[build-system]
requires = ["setuptools>=64.0.0", "setuptools_scm[toml]>=6.2", "pip >= 21.3"]
build-backend = "setuptools.build_meta"

[project]
name = "automata"
dynamic = ["version"]
description = "Application to template automata"
readme = "README.md"
requires-python = ">=3.11"
license = {text =  "??"}
authors = [
    {name = "abf", email = "alexander.bastidas.fry@gmail.com"},
    ]
dependencies = [
    "scikit-learn>=1.5.2",
    "numpy == 2.2.5",
    "scipy >= 1.7.3",
    "pandas >= 2.2, <2.3",
    "jupyter",
    "ipympl",
    "matplotlib >= 3.4.0",
    "types-python-dateutil",
    "seaborn >= 0.12.2",
    "networkx",
    "pillow",
    "uvicorn",
    "fastapi",
    "Flask",
    "python-dotenv",
    "websocket-client",
    "pydantic == 2.12.4",
    "pylinkage"
    ]

[project.optional-dependencies]
testing = [
    "pytest>=4.3.1",
    "pytest-cov>=2.6.1",
    "pytest-asyncio",
    ]

dev = [
    "pre-commit"
    ]



[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.setuptools.packages.find]
where = ["."]
include = ["configs*", "structs*", "backend*", "frontend*", "link*", "viz_tools*", "tests*"]

